# ray-tracing-one-weekend-cpp

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  bulk_convert.py  bulk_convert.sh  image.ppm
.cache/clangd/index/: XoshiroCpp.hpp.97F882AC0ACDBF9E.idx  XoshiroCpp.hpp.B4DB00E0FE375C04.idx  camera.cc.767534844EA26FBD.idx  camera.h.10625B59EB9112FA.idx  color.h.86EA8100F1FC4AB4.idx  depth_of_field.cc.882EA36FCC473B73.idx  dielectric_alt_view.cc.57AA0F73B3311644.idx  dielectric_scene.cc.C395D50A57336435.idx  file_io.h.84C6A284F2BEBDB7.idx  final_scene.cc.B6BF3F6E2AB0C0F7.idx  hittable.h.6425C34B9A8F7B2C.idx  hittable_list.h.199B09ACD90E3BDD.idx  hittable_scene.cc.40BA622D89C53F24.idx  interval.h.4F7CEFC83F5DBC3F.idx  material.h.FA6A7540FD1C8336.idx  metal_scene.cc.DAA011D2B03608E7.idx  output_ppm.cc.162A2C094CB3B535.idx  prelude.h.BA6D16C81676AF71.idx  random.cc.27AE808DF7E7D77E.idx  random.hpp.5CDBC22542983BB0.idx  ray.h.7C9E268C1E75AAD7.idx  rendered_normals.cc.788EDFE578E37E27.idx  single_sphere.cc.A0214171B798507E.idx  smoke.cc.1BB7B87EE069418E.idx  smoke.cc.493672EA3D388124.idx  sphere.h.3E3EB4A3F49E5AC6.idx  types.h.5E75FD84B1FF8F3B.idx  types.hpp.EA975A74E86F3A4C.idx  utils.h.53341D4F8A393548.idx  vec3.cc.FA68F5FA714A337A.idx  vec3.h.7C191E00C32FB71E.idx  vec3.hpp.96E9501DEDD5E728.idx  wide_angle_fov.cc.5FB1311B0A878443.idx
.github/workflows/: cmake-multi-platform.yml  create-executables-linux.yml  create-executables-windows.yml
apps/: CMakeLists.txt  camera.cc  camera_scene.cc  depth_of_field.cc  dielectric_alt_view.cc  dielectric_scene.cc  file_io.h  final_scene.cc  hittable_scene.cc  metal_scene.cc  output_ppm.cc  rendered_normals.cc  single_sphere.cc  wide_angle_fov.cc
include/weekend/: weekend.hpp
include/weekend/base/: camera.hpp  hittable.hpp  hittable_list.hpp  material.hpp  sphere.hpp
include/weekend/core/: color.hpp  core.hpp  interval.hpp  random.hpp  ray.hpp  types.hpp  vec3.hpp
include/weekend/utils/: debugging.hpp  file_io.hpp  radians.hpp
src/: CMakeLists.txt  smoke.cc
src/core/: random.cc  vec3.cc
tests/: CMakeLists.txt
weekend/: CMakeLists.txt
weekend/include/: camera.h  color.h  file_io.h  hittable.h  hittable_list.h  interval.h  material.h  prelude.h  ray.h  sphere.h  types.h  utils.h  vec3.h  xoshiro256.h
weekend/include/ecs/: I_Allocator.hpp  SphereAllocator.hpp  hitbox.hpp  namespace.hpp  null_iterator.hpp  prelude.hpp  sphere.hpp
weekend/include/utils/: utils.h
weekend/include/utils/enums/: vaild.h
weekend/src/: smoke.cc
weekend/tests/: CMakeLists.txt
